0.x (upcoming release)
- (infrastructure) migrate to Spring Boot 2.3

0.4.7
- (infrastructure) port JavaScript unit tests from Jasmine to Jest
- (infrastructure) discontinue usage of Danger
- (infrastructure) discontinue usage of 0pdd
- (infrastructure) migrate CI from Travis to GitHub Actions
- (improvement)    show last added series first on the pages with a collection info, series info and collection estimation
- (infrastructure) migrate to Spring Boot 2.2

0.4.6
- (feature)        users can add a comment to a series
- (feature)        admin can hide an image
- (infrastructure) migrate to JUnit 5

0.4.5
- (infrastructure) migrate to Spring Boot 2.1

0.4.4
- (feature)     a series can be marked as a similar to another one
- (feature)     series images can be replaced
- (feature)     add preliminary support for hidden images
- (feature)     admin can add a comment to a series
- (feature)     admin can add a release year to a series
- (feature)     admin can add a price in Michel, Scott, Yvert, Gibbons, Solovyov, and Zagorski catalogs
- (feature)     admin can add numbers in Michel, Scott, Yvert, Gibbons, Solovyov, and Zagorski catalogs
- (improvement) on a country info page show the series with an image
- (improvement) on a collection info page show the series with an image
- (feature)     add a condition (MNH/MNHOG/MVLH/CTO/cancelled) to a series sale

0.4.3
- (feature)        add support for Ukrainian hryvnia
- (feature)        add support for Belarusian ruble
- (feature)        a request that failed to download a file, can be retried
- (infrastructure) migrate to Spring Boot 2
- (infrastructure) apply infrastructure-as-code approach with Terraform

0.4.2
- (feature)        users can add multiple instances of a series into a collection
- (infrastructure) all integration tests now pass on PostgreSQL
- (infrastructure) migrate unit tests from Hamcrest to AssertJ

0.4.1