@@ -38,14 +38,14 @@ jobs:
         run: ansible --version
 
       - name: Decrypt ansible files
-        working-directory: infra/vagrant
+        working-directory: infra/ansible
         env:
           # https://docs.github.com/en/actions/security-guides/encrypted-secrets#using-encrypted-secrets-in-a-workflow
           VAULT_PASSWORD: ${{ secrets.VAULT_PASSWORD }}
         run: |
           printf '%s' "$VAULT_PASSWORD" >vault-pass.txt
 
-          for FILENAME in provisioning/vars/prod.yml provisioning/coder_rsa; do
+          for FILENAME in vars/prod.yml coder_rsa; do
             echo "Decrypting ${FILENAME}.enc to $FILENAME"
             ansible-vault decrypt \
               --vault-password-file vault-pass.txt \
@@ -54,27 +54,27 @@ jobs:
           done
 
       - name: Install required collections
-        working-directory: infra/vagrant
-        run: ansible-galaxy role install --role-file requirements.yml --roles-path provisioning/roles
+        working-directory: infra/ansible
+        run: ansible-galaxy role install --role-file requirements.galaxy.yml --roles-path roles
 
       - name: Run ansible in syntax check mode
-        working-directory: infra/vagrant
-        run: ansible-playbook provisioning/prod.yml -i provisioning/prod.inventory --syntax-check
+        working-directory: infra/ansible
+        run: ansible-playbook prod.yml -i prod.inventory --syntax-check
 
       - name: Run ansible
-        working-directory: infra/vagrant
+        working-directory: infra/ansible
         env:
           # Disable host key checking to suppress interactive prompt.
           # See: https://docs.ansible.com/ansible/2.10/user_guide/connection_details.html#managing-host-key-checking
           ANSIBLE_HOST_KEY_CHECKING: 'False'
           # See: https://docs.ansible.com/ansible/2.10/reference_appendices/config.html#envvar-ANSIBLE_PRIVATE_KEY_FILE
-          ANSIBLE_PRIVATE_KEY_FILE: 'provisioning/coder_rsa'
-        run: ansible-playbook provisioning/prod.yml -i provisioning/prod.inventory
+          ANSIBLE_PRIVATE_KEY_FILE: 'coder_rsa'
+        run: ansible-playbook prod.yml -i prod.inventory
 
       - name: Cleanup
         if: always()
-        working-directory: infra/vagrant
+        working-directory: infra/ansible
         run: |
-          for FILE in vault-pass.txt provisioning/vars/prod.yml provisioning/coder_rsa; do
+          for FILE in vault-pass.txt vars/prod.yml coder_rsa; do
             [ ! -f "$FILE" ] || rm -fv "$FILE"
           done
